# rust_rocket

./: .gitignore  README.md  desktop.ini
Notes/: 01-Quickstart.txt  02-Lifecycle  03- Req  04-Resp  05-State  06-Fairings
hello-rocket/: Cargo.toml
hello-rocket/src/: error_catchers.rs  json_example.rs  main.rs  managed_state.rs
rest_api_items/: Cargo.toml
rest_api_items/src/: api.rs  main.rs
