[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["ahaggi <a.haggi@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.101"
rocket_contrib = "0.4.2"
rocket_cors = "0.5.0"